--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Bootstrap Portfolio</title>
+    <title>Michael Hegner Portfolio</title>
   </head>
 
 <body>
@@ -61,7 +61,7 @@
 
               <div class="col-md-6 col-12 contentImgDiv">
                   <img class="img-fluid mx-auto d-block contentImg" src="assets/images/fashion-q-g-640-480-8.jpg" alt="picture"/>
-                  <p class="caption text-center">Image 1</p>
+                  <a class="caption text-center" href="https://hegner123.github.io/word_guess_game/">Image 1</a>
               </div>
 
               <div class="col-md-6 col-12 contentImgDiv">
