update portfolio with word-guess-game link, and image

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,29 +60,56 @@
             <div class="row">
 
               <div class="col-md-6 col-12 contentImgDiv">
-                  <img class="img-fluid mx-auto d-block contentImg" src="assets/images/fashion-q-g-640-480-8.jpg" alt="picture"/>
-                  <a class="caption text-center" href="https://hegner123.github.io/word_guess_game/">Image 1</a>
+                  <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+                  <div class="dropdown">
+                    <button class="dropbtn">Word Guess Game</button>
+                    <div class="dropdown-content">
+                      <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
+                      <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
+                    </div>
+                  </div>
               </div>
 
               <div class="col-md-6 col-12 contentImgDiv">
-                  <img class="img-fluid mx-auto d-block contentImg" src="assets/images/fashion-q-g-640-480-8.jpg" alt="picture"/>
-                  <p class="caption text-center">Image 2</p>
-              </div>
+                <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+                <div class="dropdown">
+                  <button class="dropbtn">Word Guess Game</button>
+                  <div class="dropdown-content">
+                    <a href="#">Word Guess: Page</a>
+                    <a href="#">Word Guess: Repo</a>
+                  </div>
+                </div>
+            </div>
 
-              <div class="col-md-6 col-12 contentImgDiv">
-                  <img class="img-fluid mx-auto d-block contentImg" src="assets/images/fashion-q-g-640-480-8.jpg" alt="picture"/>
-                  <p class="caption text-center">Image 3</p>
-              </div>
 
-              <div class="col-md-6 col-12 contentImgDiv">
-                  <img class="img-fluid mx-auto d-block contentImg" src="assets/images/fashion-q-g-640-480-8.jpg" alt="picture"/>
-                  <p class="caption text-center">Image 4</p>
+            <div class="col-md-6 col-12 contentImgDiv">
+              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+              <div class="dropdown">
+                <button class="dropbtn">Word Guess Game</button>
+                <div class="dropdown-content">
+                  <a href="#">Word Guess: Page</a>
+                  <a href="#">Word Guess: Repo</a>
+                </div>
               </div>
+          </div>
+
+
+          <div class="col-md-6 col-12 contentImgDiv">
+            <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+            <div class="dropdown">
+              <button class="dropbtn">Word Guess Game</button>
+              <div class="dropdown-content">
+                <a href="#">Word Guess: Page</a>
+                <a href="#">Word Guess: Repo</a>
+              </div>
+            </div>
+        </div>
 
             </div>
     </div>
   
   <div class="col-lg-2 col-md-1"></div>
+  
 </div>
 
 <div class="space">
