--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,8 @@
                 <div class="dropdown">
                   <button class="dropbtn">Word Guess Game</button>
                   <div class="dropdown-content">
-                    <a href="#">Word Guess: Page</a>
-                    <a href="#">Word Guess: Repo</a>
+                    <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
+                    <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
                   </div>
                 </div>
             </div>
@@ -87,8 +87,8 @@
               <div class="dropdown">
                 <button class="dropbtn">Word Guess Game</button>
                 <div class="dropdown-content">
-                  <a href="#">Word Guess: Page</a>
-                  <a href="#">Word Guess: Repo</a>
+                  <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
+                  <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
                 </div>
               </div>
           </div>
@@ -99,8 +99,8 @@
             <div class="dropdown">
               <button class="dropbtn">Word Guess Game</button>
               <div class="dropdown-content">
-                <a href="#">Word Guess: Page</a>
-                <a href="#">Word Guess: Repo</a>
+                <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
+                <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
               </div>
             </div>
         </div>
