cleaned up code, added content to about me section.

--- a/index.html
+++ b/index.html
@@ -69,42 +69,18 @@
             <img class="img-fluid" src="assets/images/IMG_0121 copy 3.jpg" alt="pix">
           </div>
 
-          <div class="col">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ex pariatur, deserunt excepturi
-              consectetur amet reprehenderit? Magni ut culpa quidem cumque illo dolores totam quos maiores recusandae
-              dolorem error voluptatum asperiores molestiae, laborum suscipit eius reprehenderit laboriosam optio
-              provident odio saepe sint sequi voluptate. Nam modi, molestias aut totam culpa distinctio placeat sed.
-              Iusto eaque earum laudantium temporibus maxime eligendi unde eveniet nulla sunt, asperiores illo
-              delectus natus amet, molestias quaerat repellendus cupiditate incidunt totam nobis modi. Iure illo iste
-              recusandae nam doloremque porro earum, ipsam quae modi quidem repudiandae mollitia quas! Totam modi
-              repellat expedita illo rem ut officiis.</p>
-            </div>
-            </div>
+                  <div class="col">
+                    <p>I’m Michael Hegner. Born and raised in Midlothian. I attended Middle Tennessee State University and got my degree in Recording Industry with a concentration in Audio Production. I’ve worked a bunch of jobs since graduating in and out of my field of study, but nothing could support me long term. Currently I’m at Carmax working in the mail room. My friend took this course and came out of it and immediately landed a job that pays well. I hope to do the same so I can open my own recording studio. A fun fact is I engineered Julien Bakers debut record Sprained Ankle.</p>
+                 </div>
+                </div>
+             </div>
+           </div>
 
-          <div class="row ml-3">
-            <div class="col">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta fugit distinctio dicta quo voluptatibus
-              numquam facere cum, animi, magni nesciunt similique, quae repudiandae harum aspernatur optio expedita
-              aut minima obcaecati eligendi. Praesentium autem doloremque repudiandae delectus totam, consectetur
-              aliquam sint necessitatibus ratione omnis magnam a facere animi debitis voluptate accusamus! Ipsa
-              quibusdam consequuntur, quae velit tempore debitis nam sequi asperiores nostrum delectus architecto
-              natus iusto iure voluptates saepe eius aperiam obcaecati neque earum veritatis harum cupiditate maxime
-              ducimus fugit! Mollitia quibusdam exercitationem molestiae adipisci assumenda obcaecati nemo, ullam
-              libero, iste recusandae doloremque hic? Minima quisquam dolores culpa fuga? Cupiditate, tempore.</p>
-            </div>
-            </div>
-            </div>
+         </div>
 
-
-          </div>
-
-
-
-        </div>
+       </div>
 
       </div>
-
-    </div>
     </div>
 
     <div class="space">
