added links to unit-4 repo/page

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,10 +73,10 @@
               <div class="col-md-6 col-12 contentImgDiv">
                 <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
                 <div class="dropdown">
-                  <button class="dropbtn">Word Guess Game</button>
+                  <button class="dropbtn">RPG Game</button>
                   <div class="dropdown-content">
-                    <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
-                    <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
+                    <a href="https://hegner123.github.io/unit-4-game/" target="none">RPG Game: Page</a>
+                    <a href="https://github.com/hegner123/unit-4-game" target="none">RPG Game: Repo</a>
                   </div>
                 </div>
             </div>
