--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
 
                   <div class="col">
-                    <p>I’m Michael Hegner. Born and raised in Midlothian. I attended Middle Tennessee State University and got my degree in Recording Industry with a concentration in Audio Production. I’ve worked a bunch of jobs since graduating in and out of my field of study, but nothing could support me long term. Currently I’m at Carmax working in the mail room. My friend took this course and came out of it and immediately landed a job that pays well. I hope to do the same so I can open my own recording studio. A fun fact is I engineered Julien Bakers debut record Sprained Ankle.</p>
+                    <p>I’m Michael Hegner. Born and raised in Midlothian, Virginia. I attended Middle Tennessee State University and got my degree in Recording Industry with a concentration in Audio Production. I’ve worked a bunch of jobs since graduating in and out of my field of study, but nothing could support me long term. Currently I’m at Carmax working in the mail room. My friend took this course and came out of it and immediately landed a job that pays well. I hope to do the same so I can open my own recording studio. A fun fact is I engineered Julien Bakers debut record Sprained Ankle.</p>
                  </div>
                 </div>
              </div>
