added rpg game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
               </div>
 
               <div class="col-md-6 col-12 contentImgDiv">
-                <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+                <img class="img-fluid mx-auto d-block contentImg" src="assets/images/starwarsRPG.jpg" alt="picture"/>
                 <div class="dropdown">
                   <button class="dropbtn">RPG Game</button>
                   <div class="dropdown-content">
@@ -82,7 +82,7 @@
             </div>
 
 
-            <div class="col-md-6 col-12 contentImgDiv">
+            <div class="col-md-6 col-12 contentImgDiv d-none">
               <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
               <div class="dropdown">
                 <button class="dropbtn">Word Guess Game</button>
@@ -94,7 +94,7 @@
           </div>
 
 
-          <div class="col-md-6 col-12 contentImgDiv">
+          <div class="col-md-6 col-12 contentImgDiv d-none">
             <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
             <div class="dropdown">
               <button class="dropbtn">Word Guess Game</button>
