--- a/portfolio.html
+++ b/portfolio.html
@@ -82,13 +82,13 @@
             </div>
 
 
-            <div class="col-md-6 col-12 contentImgDiv d-none">
-              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+            <div class="col-md-6 col-12 contentImgDiv">
+              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/trivia-game.png" alt="picture"/>
               <div class="dropdown">
-                <button class="dropbtn">Word Guess Game</button>
+                <button class="dropbtn">Trivia Game</button>
                 <div class="dropdown-content">
-                  <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
-                  <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
+                  <a href="https://hegner123.github.io/timed_questions/" target="none">Trivia Game: Page</a>
+                  <a href="https://github.com/hegner123/timed_questions" target="none">Trivia Game: Repo</a>
                 </div>
               </div>
           </div>
