edited style of dropdowns

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
   
             <div class="row">
 
-              <div class="col-md-6 col-12 contentImgDiv">
+              <div class="col-4 contentImgDiv">
                   <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
                   <div class="dropdown">
                     <button class="dropbtn">Word Guess Game</button>
@@ -70,7 +70,7 @@
                   </div>
               </div>
 
-              <div class="col-md-6 col-12 contentImgDiv">
+              <div class=" col-4 contentImgDiv">
                 <img class="img-fluid mx-auto d-block contentImg" src="assets/images/starwarsRPG.jpg" alt="picture"/>
                 <div class="dropdown">
                   <button class="dropbtn">RPG Game</button>
@@ -82,8 +82,8 @@
             </div>
 
 
-            <div class="col-md-6 col-12 contentImgDiv">
-              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/trivia-game.png" alt="picture"/>
+            <div class=" col-4 contentImgDiv">
+              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/trivia-game-crop.png" alt="picture"/>
               <div class="dropdown">
                 <button class="dropbtn">Trivia Game</button>
                 <div class="dropdown-content">
@@ -94,7 +94,7 @@
           </div>
 
 
-          <div class="col-md-6 col-12 contentImgDiv d-none">
+          <div class=" col-4 contentImgDiv d-none">
             <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
             <div class="dropdown">
               <button class="dropbtn">Word Guess Game</button>
