added jquery to portfolio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
   <title>Michael Hegner Portfolio</title>
 </head>
 
@@ -50,13 +51,13 @@
   </nav>
   <!-- end navbar code -->
 
-  <section class="fluid-container">
+  <section class="container">
 
     <div class="row mt-3 mx-0">
 
       <div class="col col-lg-8 col-md-10 col-10 m-auto border myContent p-3">
 
-        <div class="row">
+      <div class="row">
 
           <div class="col col-12">
             <h2 class="contentHeadText">About Me</h2>
@@ -64,30 +65,29 @@
 
           <div class="col col-12">
 
-            <div class="row ml-3">
-            <div class="col col-lg-3 col-md-6 col-12">
-            <img class="img-fluid" src="assets/images/IMG_0121 copy 3.jpg" alt="pix">
+              <div class="row ml-3">
+
+                    <div class="col col-lg-3 col-md-6 col-12">
+                    <img class="img-fluid" src="assets/images/IMG_0121 copy 3.jpg" alt="pix">
+                    </div>
+
+                    <div class="col">
+                        <p>I’m Michael Hegner. Born and raised in Midlothian, Virginia. I attended Middle Tennessee State University and got my degree in Recording Industry with a concentration in Audio Production. I’ve worked a bunch of jobs since graduating in and out of my field of study, but nothing could support me long term. Currently I’m at Carmax working in the mail room. My friend took this course and came out of it and immediately landed a job that pays well. I hope to do the same so I can open my own recording studio. A fun fact is I engineered Julien Bakers debut record Sprained Ankle.</p>
+                  </div>
+
+              </div>
           </div>
+      </div>
 
-                  <div class="col">
-                    <p>I’m Michael Hegner. Born and raised in Midlothian, Virginia. I attended Middle Tennessee State University and got my degree in Recording Industry with a concentration in Audio Production. I’ve worked a bunch of jobs since graduating in and out of my field of study, but nothing could support me long term. Currently I’m at Carmax working in the mail room. My friend took this course and came out of it and immediately landed a job that pays well. I hope to do the same so I can open my own recording studio. A fun fact is I engineered Julien Bakers debut record Sprained Ankle.</p>
-                 </div>
-                </div>
-             </div>
-           </div>
+    </div>
 
-         </div>
-
-       </div>
+  </div>
 
       </div>
     </div>
 
     <div class="space">
-      &#8203;
-      &#8203;
-      &#8203;
-      &#8203;
+     
     </div>
 
 
