changed styleing and background images a bit

--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
   <!-- spacer div, hides below large screen breakpoint -->
     </nav>
     <!-- end navbar code -->
-<section class="fluid-container">
+<section class="container">
 
-  <div class="row mt-3 mx-0">
+  <div class="row mt-5 mx-0">
 
-      <div class="col col-lg-8 col-md-10 col-10 m-auto border myContent p-3">
+      <div class="col col-lg-10  col-11 m-auto border myContent p-3">
 
       <div class="contentHead">
                 <h2 class="contentHeadText">Contact Me</h2>
