--- a/portfolio.html
+++ b/portfolio.html
@@ -50,83 +50,92 @@
 <!-- spacer div, hides below large screen breakpoint -->
   </nav>
   <!-- end navbar code -->
-<section class="fluid-container">
-
-  <div class="row mt-3 mx-0">
-
-    <div class="col-lg-2 col-md-1"></div>
-
-    <div class="col col-lg-8 col-md-10 col-10 m-auto border myContent p-3">
   
-            <div class="row">
+<section class="container">
 
-              <div class="col-4 contentImgDiv">
-                  <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
-                  <div class="dropdown">
-                    <button class="dropbtn">Word Guess Game</button>
-                    <div class="dropdown-content">
-                      <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
-                      <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
-                    </div>
-                  </div>
-              </div>
+<div class="row mt-5 mx-0">
 
-              <div class=" col-4 contentImgDiv">
-                <img class="img-fluid mx-auto d-block contentImg" src="assets/images/starwarsRPG.jpg" alt="picture"/>
-                <div class="dropdown">
-                  <button class="dropbtn">RPG Game</button>
-                  <div class="dropdown-content">
-                    <a href="https://hegner123.github.io/unit-4-game/" target="none">RPG Game: Page</a>
-                    <a href="https://github.com/hegner123/unit-4-game" target="none">RPG Game: Repo</a>
-                  </div>
-                </div>
-            </div>
+  <div class="col col-lg-10  col-11 m-auto border myContent p-3">
 
+    <div class="row">
 
-            <div class=" col-4 contentImgDiv">
-              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/trivia-game-crop.png" alt="picture"/>
+          <div class="col col-lg-5 col-12 contentImgDiv">
+              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
               <div class="dropdown">
-                <button class="dropbtn">Trivia Game</button>
+                <button class="dropbtn">Word Guess Game</button>
                 <div class="dropdown-content">
-                  <a href="https://hegner123.github.io/timed_questions/" target="none">Trivia Game: Page</a>
-                  <a href="https://github.com/hegner123/timed_questions" target="none">Trivia Game: Repo</a>
+                  <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
+                  <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
                 </div>
               </div>
           </div>
 
-
-          <div class=" col-4 contentImgDiv d-none">
-            <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+          <div class="col col-lg-5 col-12 contentImgDiv">
+            <img class="img-fluid mx-auto d-block contentImg" src="assets/images/starwarsRPG.jpg" alt="picture"/>
             <div class="dropdown">
-              <button class="dropbtn">Word Guess Game</button>
+              <button class="dropbtn">RPG Game</button>
               <div class="dropdown-content">
-                <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
-                <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
+                <a href="https://hegner123.github.io/unit-4-game/" target="none">RPG Game: Page</a>
+                <a href="https://github.com/hegner123/unit-4-game" target="none">RPG Game: Repo</a>
               </div>
             </div>
-        </div>
+          </div>
 
+
+          <div class="col col-lg-5 col-12 contentImgDiv">
+          <img class="img-fluid mx-auto d-block contentImg" src="assets/images/trivia-game-crop.png" alt="picture"/>
+          <div class="dropdown">
+            <button class="dropbtn">Trivia Game</button>
+            <div class="dropdown-content">
+              <a href="https://hegner123.github.io/timed_questions/" target="none">Trivia Game: Page</a>
+              <a href="https://github.com/hegner123/timed_questions" target="none">Trivia Game: Repo</a>
             </div>
+          </div>
+          </div>
+
+
+          <div class=" col col-lg-5 col-12 contentImgDiv d-none">
+          <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+          <div class="dropdown">
+          <button class="dropbtn"></button>
+          <div class="dropdown-content">
+            <a href="https://hegner123.github.io/word_guess_game/" target="none">Page</a>
+            <a href="https://github.com/hegner123/word_guess_game" target="none">Repo</a>
+          </div>
+          </div>
+          </div>
+
+          <div class=" col col-lg-5 col-12 contentImgDiv d-none">
+          <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+          <div class="dropdown">
+          <button class="dropbtn"></button>
+          <div class="dropdown-content">
+            <a href="https://hegner123.github.io/word_guess_game/" target="none">Page</a>
+            <a href="https://github.com/hegner123/word_guess_game" target="none">Repo</a>
+          </div>
+          </div>
+          </div>
+
     </div>
-  
-  <div class="col-lg-2 col-md-1"></div>
-  
+
+  </div>
+
 </div>
 
-<div class="space">
+  <div class="space">
     &#8203;
     &#8203;
     &#8203;
     &#8203;
   </div>
 
-    <div class="row fixed-bottom footer">
-      <div class="col-12">
-        <p class="text-center align-center p-2 footerText">&copy; 2019 Michael Hegner</p>
-      </div>
+<div class="row fixed-bottom footer">
+    <div class="col-12">
+      <p class="text-center align-center p-2 footerText">&copy; 2019 Michael Hegner</p>
     </div>
+  </div>
 
-  </section>
+</section>
 
 </body>
 
