--- a/portfolio.html
+++ b/portfolio.html
@@ -1,139 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <title>Michael Hegner Portfolio</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+  <title>Michael Hegner Portfolio</title>
+</head>
 
 <body>
 
  <!-- begin navbar code -->
  <nav class="navbar navbar-expand-lg navbar-dark myNav row">
-    <!-- spacer div, hides below lg breakpoint -->
-    <div class="col col-lg-2 p-0"></div>
+  <!-- spacer div, hides below lg breakpoint -->
+  <div class="col col-lg-2 p-0"></div>
 <!-- columns for overall nav width -->
-    <div class="col col-lg-8 col-12 p-0 ">
+  <div class="col col-lg-8 col-12 p-0 ">
 <!-- added margin=0 to fix bug on small screens -->
-      <div class="row m-0">
-        <!-- navbar brand code -->
-        <a class="text-center navbar-brand myBrand col-12 col-lg-6" href="index.html">
-          <h1 class="name text-center col-12">Michael Hegner</h1>
-        </a>
-        <!-- spacer div, hides below lg breakpoint -->
-        <div class="col-lg-1"></div>
-        <!-- nav buttons list, padding 0 corrects weird margin -->
-        <div class="nav navbar-nav col-12 col-lg-4 p-0">
-          <ul class="nav navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link deadLink" href="index.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link activeLink" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link deadLink" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <!-- end nav bar list -->
+    <div class="row m-0">
+      <!-- navbar brand code -->
+      <a class="text-center navbar-brand myBrand col-12 col-lg-6" href="index.html">
+        <h1 class="name text-center col-12">Michael Hegner</h1>
+      </a>
+      <!-- spacer div, hides below lg breakpoint -->
+      <div class="col-lg-1"></div>
+      <!-- nav buttons list, padding 0 corrects weird margin -->
+      <div class="nav navbar-nav col-12 col-lg-4 p-0">
+        <ul class="nav navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link deadLink" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link activeLink" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link deadLink" href="contact.html">Contact</a>
+          </li>
+        </ul>
       </div>
-      <!-- end row -->
+      <!-- end nav bar list -->
     </div>
-    <!-- end overall size layout -->
-    <div class="col col-lg-2  p-0"></div>
+    <!-- end row -->
+  </div>
+  <!-- end overall size layout -->
+  <div class="col col-lg-2  p-0"></div>
 <!-- spacer div, hides below large screen breakpoint -->
-  </nav>
-  <!-- end navbar code -->
+</nav>
+<!-- end navbar code -->
   
 <section class="container">
 
-<div class="row mt-5 mx-0">
+  <div class="row mt-5 mx-0">
 
-  <div class="col col-lg-10  col-11 m-auto border myContent p-3">
+    <div class="col col-lg-10  col-11 m-auto border myContent p-3">
 
-    <div class="row">
+      <div class="row">
 
-          <div class="col col-lg-5 col-12 contentImgDiv">
-              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+            <div class="col col-lg-5 col-12 contentImgDiv">
+                <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+                <div class="dropdown">
+                  <button class="dropbtn">Word Guess Game</button>
+                  <div class="dropdown-content">
+                    <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
+                    <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col col-lg-5 col-12 contentImgDiv">
+              <img class="img-fluid mx-auto d-block contentImg" src="assets/images/starwarsRPG.jpg" alt="picture"/>
               <div class="dropdown">
-                <button class="dropbtn">Word Guess Game</button>
+                <button class="dropbtn">RPG Game</button>
                 <div class="dropdown-content">
-                  <a href="https://hegner123.github.io/word_guess_game/" target="none">Word Guess: Page</a>
-                  <a href="https://github.com/hegner123/word_guess_game" target="none">Word Guess: Repo</a>
+                  <a href="https://hegner123.github.io/unit-4-game/" target="none">RPG Game: Page</a>
+                  <a href="https://github.com/hegner123/unit-4-game" target="none">RPG Game: Repo</a>
                 </div>
               </div>
-          </div>
+            </div>
 
-          <div class="col col-lg-5 col-12 contentImgDiv">
-            <img class="img-fluid mx-auto d-block contentImg" src="assets/images/starwarsRPG.jpg" alt="picture"/>
+
+            <div class="col col-lg-5 col-12 contentImgDiv">
+            <img class="img-fluid mx-auto d-block contentImg" src="assets/images/trivia-game-crop.png" alt="picture"/>
             <div class="dropdown">
-              <button class="dropbtn">RPG Game</button>
+              <button class="dropbtn">Trivia Game</button>
               <div class="dropdown-content">
-                <a href="https://hegner123.github.io/unit-4-game/" target="none">RPG Game: Page</a>
-                <a href="https://github.com/hegner123/unit-4-game" target="none">RPG Game: Repo</a>
+                <a href="https://hegner123.github.io/timed_questions/" target="none">Trivia Game: Page</a>
+                <a href="https://github.com/hegner123/timed_questions" target="none">Trivia Game: Repo</a>
               </div>
             </div>
-          </div>
-
-
-          <div class="col col-lg-5 col-12 contentImgDiv">
-          <img class="img-fluid mx-auto d-block contentImg" src="assets/images/trivia-game-crop.png" alt="picture"/>
-          <div class="dropdown">
-            <button class="dropbtn">Trivia Game</button>
-            <div class="dropdown-content">
-              <a href="https://hegner123.github.io/timed_questions/" target="none">Trivia Game: Page</a>
-              <a href="https://github.com/hegner123/timed_questions" target="none">Trivia Game: Repo</a>
             </div>
-          </div>
-          </div>
 
 
-          <div class=" col col-lg-5 col-12 contentImgDiv d-none">
-          <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
-          <div class="dropdown">
-          <button class="dropbtn"></button>
-          <div class="dropdown-content">
-            <a href="https://hegner123.github.io/word_guess_game/" target="none">Page</a>
-            <a href="https://github.com/hegner123/word_guess_game" target="none">Repo</a>
-          </div>
-          </div>
-          </div>
+            <div class=" col col-lg-5 col-12 contentImgDiv">
+            <img class="img-fluid mx-auto d-block contentImg" src="assets/images/Giphy-api-crop.jpg" alt="picture"/>
+            <div class="dropdown">
+            <button class="dropbtn">Giphy API</button>
+            <div class="dropdown-content">
+              <a href="https://hegner123.github.io/giphy_api/" target="none">Giphy API: Page</a>
+              <a href="https://github.com/hegner123/giphy_api" target="none">Giphy API: Repo</a>
+            </div>
+            </div>
+            </div>
 
-          <div class=" col col-lg-5 col-12 contentImgDiv d-none">
-          <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
-          <div class="dropdown">
-          <button class="dropbtn"></button>
-          <div class="dropdown-content">
-            <a href="https://hegner123.github.io/word_guess_game/" target="none">Page</a>
-            <a href="https://github.com/hegner123/word_guess_game" target="none">Repo</a>
-          </div>
-          </div>
-          </div>
+            <div class=" col col-lg-5 col-12 contentImgDiv d-none">
+            <img class="img-fluid mx-auto d-block contentImg" src="assets/images/wordguess.jpg" alt="picture"/>
+            <div class="dropdown">
+            <button class="dropbtn"></button>
+            <div class="dropdown-content">
+              <a href="https://hegner123.github.io/word_guess_game/" target="none">Page</a>
+              <a href="https://github.com/hegner123/word_guess_game" target="none">Repo</a>
+            </div>
+            </div>
+            </div>
+
+      </div>
 
     </div>
 
   </div>
 
-</div>
-
   <div class="space">
-    &#8203;
-    &#8203;
-    &#8203;
-    &#8203;
   </div>
 
 <div class="row fixed-bottom footer">
     <div class="col-12">
       <p class="text-center align-center p-2 footerText">&copy; 2019 Michael Hegner</p>
     </div>
-  </div>
+</div>
 
 </section>
 
