--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 <body>
    <!-- begin navbar code -->
-  <nav class="navbar navbar-expand-lg navbar-dark myNav row">
+  <nav class="navbar navbar-expand-lg navbar-dark my-nav row">
       <!-- spacer div, hides below lg breakpoint -->
       <div class="col col-lg-2 p-0"></div>
   <!-- columns for overall nav width -->
@@ -21,7 +21,7 @@
   <!-- added margin=0 to fix bug on small screens -->
         <div class="row m-0">
           <!-- navbar brand code -->
-          <a class="text-center navbar-brand myBrand col-12 col-lg-6" href="index.html">
+          <a class="text-center navbar-brand my-brand col-12 col-lg-6" href="index.html">
             <h1 class="name text-center col-12">Michael Hegner</h1>
           </a>
           <!-- spacer div, hides below lg breakpoint -->
@@ -30,13 +30,13 @@
           <div class="nav navbar-nav col-12 col-lg-4 p-0">
             <ul class="nav navbar-nav">
               <li class="nav-item">
-                <a class="nav-link deadLink" href="index.html">About</a>
+                <a class="nav-link dead-link" href="index.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link deadLink" href="portfolio.html">Portfolio</a>
+                <a class="nav-link dead-link" href="portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link activeLink" href="contact.html">Contact</a>
+                <a class="nav-link active-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -53,10 +53,10 @@
 
   <div class="row mt-5 mx-0">
 
-      <div class="col col-lg-10  col-11 m-auto border myContent p-3">
+      <div class="col col-lg-10 col-11 m-auto border my-content p-3">
 
-          <div class="contentHead">
-              <h2 class="contentHeadText">Contact Me</h2>
+          <div class="content-head">
+              <h2 class="content-head-text ">Contact Me</h2>
           </div>
           
 
@@ -76,7 +76,7 @@
                 <label for="text-area">Message</label>
               </div>
               
-              <button type="submit" class="btn myBtn" id="submit-button">Submit</button>
+              <button type="submit" class="btn my-btn" id="submit-button">Submit</button>
 
             </form>
 
@@ -89,7 +89,7 @@
 
     <div class="row fixed-bottom footer">
       <div class="col-12">
-        <p class="text-center align-center p-1 footerText">&copy; 2019 Michael Hegner</p>
+        <p class="text-center align-center p-1 footer-text">&copy; 2019 Michael Hegner</p>
       </div>
     </div>
 
