--- a/index.html
+++ b/index.html
@@ -15,53 +15,53 @@
   
 
   <!-- begin navbar code -->
-  <nav class="navbar navbar-expand-lg navbar-dark myNav row">
-      <!-- spacer div, hides below lg breakpoint -->
-      <div class="col col-lg-2 p-0"></div>
-  <!-- columns for overall nav width -->
-      <div class="col col-lg-8 col-12 p-0 ">
-  <!-- added margin=0 to fix bug on small screens -->
-        <div class="row m-0">
-          <!-- navbar brand code -->
-          <a class="text-center navbar-brand myBrand col-12 col-lg-6" href="index.html">
-            <h1 class="name text-center col-12">Michael Hegner</h1>
-          </a>
-          <!-- spacer div, hides below lg breakpoint -->
-          <div class="col-lg-1"></div>
-          <!-- nav buttons list, padding 0 corrects weird margin -->
-          <div class="nav navbar-nav col-12 col-lg-4 p-0">
-            <ul class="nav navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link activeLink" href="index.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link deadLink" href="portfolio.html">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link deadLink" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <!-- end nav bar list -->
+  <nav class="navbar navbar-expand-lg navbar-dark my-nav row">
+    <!-- spacer div, hides below lg breakpoint -->
+    <div class="col col-lg-2 p-0"></div>
+<!-- columns for overall nav width -->
+    <div class="col col-lg-8 col-12 p-0 ">
+<!-- added margin=0 to fix bug on small screens -->
+      <div class="row m-0">
+        <!-- navbar brand code -->
+        <a class="text-center navbar-brand my-brand col-12 col-lg-6" href="index.html">
+          <h1 class="name text-center col-12">Michael Hegner</h1>
+        </a>
+        <!-- spacer div, hides below lg breakpoint -->
+        <div class="col-lg-1"></div>
+        <!-- nav buttons list, padding 0 corrects weird margin -->
+        <div class="nav navbar-nav col-12 col-lg-4 p-0">
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active-link" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link dead-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link dead-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-        <!-- end row -->
+        <!-- end nav bar list -->
       </div>
-      <!-- end overall size layout -->
-      <div class="col col-lg-2  p-0"></div>
-  <!-- spacer div, hides below large screen breakpoint -->
-    </nav>
+      <!-- end row -->
+    </div>
+    <!-- end overall size layout -->
+    <div class="col col-lg-2  p-0"></div>
+<!-- spacer div, hides below large screen breakpoint -->
+  </nav>
     <!-- end navbar code -->
 
   <section class="container">
 
     <div class="row mt-5 mx-0">
 
-      <div class="col col-lg-10 col-11 m-auto border myContent p-3">
+      <div class="col col-lg-10 col-11 m-auto border my-content p-3">
 
       <div class="row">
 
           <div class="col col-12">
-            <h2 class="contentHeadText">About Me</h2>
+            <h2 class="content-head-text">About Me</h2>
           </div>
 
           <div class="col col-12">
@@ -94,7 +94,7 @@
 
     <div class="row fixed-bottom footer">
       <div class="col-12">
-        <p class="text-center align-center p-1 footerText">&copy; 2019 Michael Hegner</p>
+        <p class="text-center align-center p-1 footer-text">&copy; 2019 Michael Hegner</p>
       </div>
     </div>
 
