added flex-lg-row-reverse class to nav-buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <!-- spacer div, hides below lg breakpoint -->
         <div class="col-lg-1"></div>
         <!-- nav buttons list, padding 0 corrects weird margin -->
-        <div class="nav navbar-nav col-12 col-lg-4 p-0">
+        <div class="nav navbar-nav col-12 col-lg-4 p-0 flex-lg-row-reverse">
           <ul class="nav navbar-nav">
             <li class="nav-item">
               <a class="nav-link dead-link" href="index.html">About</a>
