added multiplayer RPS, some style changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,13 +105,13 @@
             </div>
             </div>
 
-            <div class=" col col-lg-5 col-12 content-img-div d-none">
-            <img class="img-fluid mx-auto d-block content-img" src="assets/images/wordguess.jpg" alt="picture"/>
+            <div class=" col col-lg-5 col-12 content-img-div">
+            <img class="img-fluid mx-auto d-block content-img" src="assets/images/rps-black-crop.jpg" alt="picture"/>
             <div class="dropdown">
-            <button class="drop-btn"></button>
+            <button class="drop-btn">Multiplayer RPS</button>
             <div class="dropdown-content">
-              <a href="https://hegner123.github.io/word_guess_game/" target="none">Page</a>
-              <a href="https://github.com/hegner123/word_guess_game" target="none">Repo</a>
+              <a href="https://hegner123.github.io/rps/" target="none">Multiplayer RPS: Page</a>
+              <a href="https://github.com/hegner123/rps" target="none">Multiplayer RPS: Repo</a>
             </div>
             </div>
             </div>
